<resources>
    <string name="app_name">BLOSSOM</string>
    <string name="facebook_app_id">1696863397282167</string>
    <!--로그인 인트로 화면-->
    <string name="intro1_sub_txt">자신만의 솔직한 이야기를 \n나눠보세요.</string>
    <string name="intro2_sub_txt">힘들고 지칠 때 힘이 될 수 있는 \n명언</string>
    <string name="intro3_sub_txt">공감하는 글에 씨앗을 \n선물해주세요.</string>
    <string name="login_txt1">Welcome</string>
    <string name="login_txt2">별다른 가입 절차 없이 생년과 성별만 선택하시면 바로 이용할 수 있습니다</string>
    <string name="login_birth_btn_txt">년도 선택</string>
    <string name="login_gender_male_txt">남성</string>
    <string name="login_gender_female_txt">여성</string>
    <string name="login_start_txt">시작하기</string>
    <string name="no_selected_birth_alert_txt">생년월일을 선택해주세요</string>
    <string name="login_btn_txt">저는 기존에 사용하던 사람입니다.</string>

    <!--아티클 업로드 화면-->
    <string name="article_edit_box_hint">생각을 자유롭게 적어보세요.</string>
    <string name="article_upload_save_txt">저장</string>
    <string name="no_exist_text">내용을 입력해주세요.</string>

    <!--Tab5-->
    <string name="tab5_viewpager_menu_title_1">이야기</string>
    <string name="tab5_viewpager_menu_title_2">내 댓글</string>
    <string name="tab5_viewpager_menu_title_3">북마크</string>
    <string name="tab5_background_title_txt">나의 솔직한 이야기</string>
    <string name="tab5_my_story_empty_txt">작성한 이야기가 없습니다.\n자신의 솔직한 이야기를 작성해보세요.</string>
    <string name="tab5_my_public_article_etc_txt">%1$s | 공감 %2$s | 댓글 %3$s</string>
    <string name="tab5_my_comment_empty_txt">작성한 댓글이 없습니다.</string>
    <string name="tab5_my_bookmark_empty_txt">북마크한 이야기가 없습니다.\n간직하고 싶은 이야기를 북마크해보세요.</string>

    <!--article-->
    <string name="article_comment_edit_hint_txt">공감한다면 댓글을 남겨보세요.</string>
    <string name="article_comment_send_btn_txt">보내기</string>
    <string name="article_comment_empty_toast_txt">댓글을 입력해주세요.</string>

    <!--public_me_article_more_dialog-->
    <string name="public_me_article_more_dialog_change_to_private_btn_txt">나만 보기</string>
    <string name="private_me_article_more_dialog_change_to_public_btn_txt">공개하기</string>
    <string name="public_me_article_more_dialog_delete_btn_txt">삭제하기</string>

    <!--other_article_more_dialog-->
    <string name="other_article_more_dialog_bookmark_btn_txt">북마크 하기</string>
    <string name="other_article_more_dialog_send_seed_btn_txt">시드 선물하기</string>
    <string name="other_article_more_dialog_report_btn_txt">이 이야기가 불편해요</string>

    <!--me_article_more_dialog-->
    <string name="me_article_more_dialog_change_private_btn">나만 보기</string>
    <string name="me_article_more_dialog_change_public_btn">공개하기</string>
    <string name="me_article_more_dialog_delete_btn">삭제하기</string>

    <!--article_delete_cancel_dialog-->
    <string name="article_delete_cancel_dialog_txt">정말 이 글을 삭제하시겠습니까?</string>
    <string name="article_delete_cancel_dialog_ok_btn_txt">예</string>
    <string name="article_delete_cancel_dialog_cancel_btn_txt">아니오</string>

    <!--bookmark_more_dialog-->
    <string name="bookmark_more_dialog_cancel_bookmark_btn_txt">북마크 해제하기</string>
    <string name="bookmark_more_dialog_share_sns_btn_txtx">공유하기</string>

    <!--tab4 Alarm text-->
    <string name="tab4_alarm_type_like_txt">누군가 %1$s 이야기에 공감합니다.</string>
    <string name="tab4_alarm_type_comment_txt">누군가 %1$s 이야기에 댓글을 남겼습니다.</string>
    <string name="tab4_alarm_type_bookmark_txt">누군가 %1$s 이야기를 북마크합니다.</string>
    <string name="tab4_alarm_empty_txt">아직 받은 알림이 없습니다.\n이야기 또는 댓글을 남겨보세요.</string>

    <!--setting activity-->
    <string name="app_setting_activity_title_0">계정</string>
    <string name="app_setting_activity_title_1">푸시 설정</string>
    <string name="app_setting_activity_title_2">일반</string>
    <string name="app_setting_push_txt_0">이메일</string>
    <string name="app_setting_push_txt_1">BLOSSOM 알림</string>
    <string name="app_setting_push_sub_txt_1">BLOSSOM에서 보내는 새소식 알림을 받습니다.</string>
    <string name="app_setting_push_txt_2">댓글 알림</string>
    <string name="app_setting_push_sub_txt_2">새로운 댓글에 대한 알림을 받습니다.</string>
    <string name="app_setting_push_txt_3">공감 알림</string>
    <string name="app_setting_push_sub_txt_3">사람들의 공감에 대한 알림을 받습니다.</string>
    <string name="app_setting_opensource_txt">오픈소스 라이선스</string>
    <string name="app_setting_app_version_txt">앱 버전</string>
    <string name="app_setting_logout_txt">로그아웃</string>

    <!--tab1 article comment -->
    <string name="tab1_article_comment_empty_txt">등록된 댓글이 없습니다.\n댓글을 남겨보세요.</string>

    <!--toast-->
    <string name="toast_network_error">네트워크 연결상태를 확인해주세요.</string>
    <string name="toast_bookmark_on">북마크가 되었습니다.</string>
    <string name="toast_bookmark_off">북마크를 해제했습니다.</string>

    <!--send report dialog -->
    <string name="send_report_title_txt">신고 사유를 선택함과 동시에 신고가 완료됩니다.</string>
    <string name="send_report_btn_1_txt">불쾌한 게시물</string>
    <string name="send_report_btn_2_txt">불법 광고나 홍보</string>
    <string name="send_report_btn_3_txt">폭력적이거나 음란한 게시물</string>
    <string name="send_report_btn_4_txt">타인을 사칭하는 게시물</string>
    <string name="send_report_btn_5_txt">기타</string>

    <!--logout_dialog -->
    <string name="logout_dialog_txt">정말 로그아웃을 하시겠습니까?</string>
    <string name="logout_for_not_email_txt">이메일을 등록하지 않으면 다시 본 계정으로 로그인을 할 수 없습니다.\n이메일을 등록해주세요.</string>


    <!--send seed dialog-->
    <string name="send_seed_dialog_title_txt">씨앗 선물하기</string>
    <string name="send_seed_dialog_subtitle_txt">좋은 이야기를 공개한 작성자에게 씨앗을 선물합니다.</string>
    <string name="send_seed_dialog_sub_txt_1">선물하고 싶은 씨앗수</string>
    <string name="send_seed_dialog_sub_txt_2">내가 가진 씨앗은 %1$s개 입니다.</string>

    <!--register email-->
    <string name="register_email_email_edit_box_txt">이메일을 입력해주세요.</string>
    <string name="register_email_pw_edit_box_txt">비밀번호를 입력해주세요.(6자 이상)</string>

    <!--coach mark txt-->
    <string name="article_start_coach_mark_txt1">시작하기</string>
    <string name="article_start_coach_mark_txt2">화면을 넘기면\n다른 이야기가 보여요.</string>

    <!--background title dialog txt-->
    <string name="background_title_dialog_title_txt">문구 수정</string>
    <string name="background_title_dialog_hint_txt">문구를 입력해주세요.</string>
</resources>


