<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/common_dialog_shape"
    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@mipmap/delete_img_circle"/>

    <TextView
        android:id="@+id/dialog_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:text="@string/article_delete_cancel_dialog_txt"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/ok_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:onClick="buttonPressed"
            android:textColor="@color/colorSky"
            android:text="@string/article_delete_cancel_dialog_ok_btn_txt"/>
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:onClick="buttonPressed"
            android:textColor="@color/colorSky"
            android:text="@string/article_delete_cancel_dialog_cancel_btn_txt"/>
    </LinearLayout>
</LinearLayout>