<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/app_title_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/back_btn_img"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="설정"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="#000000"
                    android:textSize="18dp"/>
            </RelativeLayout>
            <!--구분선-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:orientation="horizontal"
                android:background="#ffe0e0e0"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_setting_activity_title_0"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"/>
            <!--구분선-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="#ffe0e0e0"></LinearLayout>

            <RelativeLayout
                android:id="@+id/register_email_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_setting_push_txt_0"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/my_email_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_setting_activity_title_1"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"/>
            <!--구분선-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="#ffe0e0e0"></LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/app_push_txt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_setting_push_txt_1"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/app_push_sub_txt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="12dp"
                    android:textColor="@color/colorTextGray"
                    android:text="@string/app_setting_push_sub_txt_1"
                    android:layout_below="@+id/app_push_txt_1"/>

                <ImageView
                    android:id="@+id/app_push_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <!--구분선-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffe0e0e0"></LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/app_push_txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_setting_push_txt_2"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/app_push_sub_txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="12dp"
                    android:textColor="@color/colorTextGray"
                    android:text="@string/app_setting_push_sub_txt_2"
                    android:layout_below="@+id/app_push_txt_2"/>

                <ImageView
                    android:id="@+id/comment_push_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <!--구분선-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffe0e0e0"></LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/app_push_txt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_setting_push_txt_3"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/app_push_sub_txt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="12dp"
                    android:textColor="@color/colorTextGray"
                    android:text="@string/app_setting_push_sub_txt_3"
                    android:layout_below="@+id/app_push_txt_3"/>

                <ImageView
                    android:id="@+id/article_like_push_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_setting_activity_title_2"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"/>
            <!--구분선-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffe0e0e0"></LinearLayout>

            <RelativeLayout
                android:id="@+id/open_source_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_setting_opensource_txt"
                    android:layout_centerVertical="true"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/next_img"/>
            </RelativeLayout>
            <!--구분선-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffe0e0e0"></LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_setting_app_version_txt"
                    android:layout_centerVertical="true"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/app_version_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="v1.1.5"/>
            </RelativeLayout>
            <!--구분선-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#ffe0e0e0"></LinearLayout>
            <RelativeLayout
                android:id="@+id/logout_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_setting_logout_txt"
                    android:layout_centerVertical="true"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>
