<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/intro_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:orientation="vertical">

    <TextView
        android:id="@+id/login_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_txt1"
        android:textSize="40dp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/login_txt2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login_txt2"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/birth_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_birth_btn_txt"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:textColor="#ffffff"
            android:layout_marginRight="5dp"
            android:background="@color/gender_not_selected"/>

        <LinearLayout
            android:id="@+id/male_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="17dp"
            android:background="@color/gender_selected">
            <ImageView
                android:id="@+id/male_check_img"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@mipmap/checkbox_round_img"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/login_gender_male_txt"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/female_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="17dp"
            android:background="@color/gender_not_selected">
            <ImageView
                android:id="@+id/female_check_img"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@mipmap/checkbox_round_img"
                android:layout_gravity="center_vertical"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/login_gender_female_txt"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/start_btn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_start_btn">
        <TextView
            android:id="@+id/start_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="@string/login_start_txt"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="17dp"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_toRightOf="@+id/start_txt"
            android:src="@mipmap/next_img"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"/>
    </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/select_circle_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/circle_1"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/select_circle"/>
        <ImageView
            android:id="@+id/circle_2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/no_select_circle"/>

    </LinearLayout>
</RelativeLayout>