<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:background="@drawable/common_dialog_shape">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/send_seed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:text="@string/send_seed_dialog_title_txt"
            android:textSize="17dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/send_seed_title"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textSize="12dp"
            android:textColor="@color/colorTextGray"
            android:text="@string/send_seed_dialog_subtitle_txt"
            android:layout_marginTop="5dp"/>

        <ImageView
            android:id="@+id/cancel_btn"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/close_btn"/>

    </RelativeLayout>

    <!--구분선-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffe0e0e0"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextGray"
            android:text="@string/send_seed_dialog_sub_txt_1"/>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/minus_btn"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="#dcdcdc">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/minus_img"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/seed_cnt_txt"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="#000000"
                android:text="0"
                />

            <RelativeLayout
                android:id="@+id/plus_btn"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="#dcdcdc">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/plus_img"/>
            </RelativeLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/my_seed_cnt_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorGray"
            android:text="@string/send_seed_dialog_sub_txt_2"/>

        <Button
            android:id="@+id/send_btn"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/send_seed_btn_shape"
            android:text="보내기"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</LinearLayout>